Revert "Merge branch 'main_unbroken_state' into my_foods"
This reverts commit 3d6665a41fd7d422f7bca07c0a1752ffc0df6810, reversing
changes made to e3460692a28184cc4f1fa6cdab124d21c8037e94.